sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {

	var a=getNombreValeurs()
	while (b=true)
	(i<-0 to a) {	b=false	
				
			if (plusPetit(i+1,i)) {echange(i+1,i); b=true }
		
		
	
}
}